# tick-simulator-cpp

./: .gitignore  BacktestEngine.cpp  BacktestEngine.h  CMakeLists.txt  DataHandler.cpp  DataHandler.h  Event.h  ExecutionHandler.cpp  ExecutionHandler.h  Indicators.h  LICENSE  Portfolio.cpp  Portfolio.h  README.md  Strategy.cpp  Strategy.h  download_data.py  main.cpp  test_indicators.cpp  visualize.py
